--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "yajra/laravel-datatables": "^10.0",
         "milon/barcode": "^10.0",
         "spatie/laravel-translatable": "^6.6",
-        "joshbrw/laravel-module-installer": "^2.0"
+        "joshbrw/laravel-module-installer": "^2.0",
+        "stichoza/google-translate-php": "^5.3"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
