--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "spatie/laravel-translatable": "^6.6",
         "joshbrw/laravel-module-installer": "^2.0",
         "stichoza/google-translate-php": "^5.3",
-        "mcamara/laravel-localization": "^2.3"
+        "mcamara/laravel-localization": "^2.3",
+        "opcodesio/log-viewer": "^3.21"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
